# NRSim

./: README.md
Hardware/: README.md
Hardware/A1_cmod/CICERO/: CMakeLists.txt
Hardware/A1_cmod/CICERO/AG/: AG.h
Hardware/A1_cmod/CICERO/NPU/: NPU.h
Hardware/A1_cmod/CICERO/NPU_PE/: NPU_PE.h
Hardware/A1_cmod/CICERO/include/: CICEROPackDef.h
Hardware/A1_cmod/CICERO/reducer/: reducer.h
Hardware/A1_cmod/GSCore/: CMakeLists.txt
Hardware/A1_cmod/GSCore/VRU/: VRU.h  testbench.cpp
Hardware/A1_cmod/GSCore/include/: GSCOREPackDef.h
Hardware/A1_cmod/ICARUS/: CMakeLists.txt
Hardware/A1_cmod/ICARUS/ICARUS/: CMakeLists.txt  ICARUS.h  testbench.cpp
Hardware/A1_cmod/ICARUS/MLP_shared/: mlp_test.py
Hardware/A1_cmod/ICARUS/VRU/: VRU.h  testbench.cpp
Hardware/A1_cmod/ICARUS/include/: ICARUSPackDef.h  auto_gen_fields.h
Hardware/A1_cmod/NEUREX/: CMakeLists.txt
Hardware/A1_cmod/NEUREX/NPU/: NPU.h
Hardware/A1_cmod/NEUREX/NPU_PE/: NPU_PE.h
Hardware/A1_cmod/NEUREX/include/: NEUREXPackDef.h
Hardware/S0_scripts/: Makefile  report_all.sh
Hardware/S0_scripts/hls/: catapult.global.tcl
Hardware/S1_projconf/CICERO/AG/: hlsinclude.mk
Hardware/S1_projconf/GSCore/VRU/: hlsinclude.mk
Instrumentation/: README.md  eval.py
Instrumentation/instrumentation/: trace_config.json  tracing.py
Operators/: README.md
Operators/operators/: computation_operator.py
Operators/utils/: operator_graph.py
Scheduler/: README.md  gscore_schedule.py
